feat: update checkbox path

--- a/.github/workflows/ci-checklist.yml
+++ b/.github/workflows/ci-checklist.yml
@@ -20,8 +20,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           paths: |
-            docs/*.md:
-              - <!--Checkmate select=2-->
-              - Strong Consistency
-              - Availability
-              - Partition Tolerance
+            **:
+              - <!--Checkmate select=1-->
+              - I have tested my changes in a sandbox: sbx link
+              - My changes do not affect sandboxes
