--- a/.github/workflows/ci-checklist.yml
+++ b/.github/workflows/ci-checklist.yml
@@ -13,6 +13,7 @@ name: Checkmate
 jobs:
   validate-checklists:
     runs-on: ubuntu-latest
+    name: Validate Checklist
     steps:
       - uses: actions/checkout@v3
       - name: Validate Checklists
